--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 					</p>
 					<p>
 						Do you have a business inquiry? Do you wish to start a conversation? You can reach me at
-						<a href="mailto:m_flaherty@hotmail.com?Subject=Portfolio - inquiry" target="_blank">m_flaherty@hotmail.com.</a>
+						<a href="mailto:flaherty.martin@gmail.com?Subject=Portfolio - inquiry" target="_blank">m_flaherty@hotmail.com.</a>
 					</p>
 					<p>
 						Interested in connecting with me? Connect through
@@ -173,7 +173,7 @@
 					</p>
 				</div>
 				<div class="col-sm-8" id="contact-form">
-					<form action="https://formspree.io/mpzavloj" method="POST">
+					<form action="https://formspree.io/f/xzbydrod" method="POST">
 						<h3>Comments or Questions?<br />Shoot me an email:</h3>
 						<hr />
 						<input type="email" name="_replyto" placeholder="your@email.here" class="form-input rounded" required />
